# wallwars

./: .dockerignore  .gitignore  .prettierrc  README.md  fly.toml
AI/: CMakeLists.txt  CMakePresets.json  README.md  benchmark.cc  benchmark.h  board_io.cc  board_io.h  constants.h  graph.cc  graph.cpp  graph.h  human.cc  human.h  io.cc  io.h  macros.h  main.cc  main.cpp  makefile  move.h  mover.h  negamaxer.cc  negamaxer.h  situation.cc  situation.h  template_utils.h  tests.cc  walker.cc
AI/benchmark_out/: 2022-04-17_12h36m14s.txt  2022-05-01_10h47m32s.csv  2022-05-01_10h47m32s.txt  2022-05-01_10h58m43s.csv  2022-05-01_10h58m43s.txt  2022-05-01_12h02m41s.csv  2022-05-01_12h02m41s.txt  2022-05-01_19h23m53s.csv  2022-05-01_19h23m53s.txt  README.txt
AI/cmake/: toolchain-clang-analyze.cmake  toolchain-clang.cmake  toolchain-emcc.cmake  toolchain-gcc.cmake
AI/include/: benchmark.h  benchmark_metrics.h  constants.h  graph.h  interactive_game.h  macro_utils.h  macros.h  move.h  mover.h  negamax.h  negamaxer.h  situation.h  template_utils.h  tests.h  transposition_table.h  utils.h  walker.h
AI/source/: benchmark.cc  board_io.cc  graph.cc  main.cc  negamaxer.cc  situation.cc  tests.cc  walker.cc
backend/: .gitignore  Dockerfile  app.js  app.ts  gameController.js  index.ts  mongoose.js  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/routes/: index.js
backend/src/: ChallengeBroadcast.js  ChallengeBroadcast.ts  GameManager.js  GameManager.ts  authUtils.ts  database.ts  gameController.js  gameState.js  gameState.ts  logUtils.js  logUtils.ts  messageList.js  messageList.ts  rating.ts  util.ts
docs/: moveLogic.md
frontend/: .babelrc  .env  .gitignore  Makefile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  README.md  ai.cc  ai.mjs  index.css  index.tsx  (+1 more)
(+89 files in other folders)
